--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>webApp-2024</title>
+        <title>webApp-2025</title>
         <style>
             body {
                 font-family: Arial, sans-serif;
@@ -89,11 +89,10 @@
     </head>
 
     <body>
-        <h1>WELCOME TO CLOUD AND DEVOPS SEMINAR - 2025</h1>
+        <h1>WELCOME TO CLOUD AND DEVOPS</h1>
 
-<h1>NO PAID REGISTRATION : FULLY VIRTUAL MODE</h1>
 
-<h1>Thank you</h1>
+<h1>Think cloud and Devops</h1>
         <ul>
             <% todolist.forEach(function(todo, index) { %>
             <li>
