--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -92,7 +92,7 @@
         <h1>WELCOME TO CLOUD AND DEVOPS</h1>
 
 
-<h1>cloudssssssssssss</h1>
+<h1>cloud devops learn</h1>
         <ul>
             <% todolist.forEach(function(todo, index) { %>
             <li>
