--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -89,10 +89,10 @@
     </head>
 
     <body>
-        <h1>WELCOME TO CLOUD AND DEVOPS</h1>
+        <h1>AWS AWS AWS AWS AWS</h1>
 
 
-<h1>cloud devops learn</h1>
+<h1>DEVOPS DEVOPS DEVOPS</h1>
         <ul>
             <% todolist.forEach(function(todo, index) { %>
             <li>
