--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -89,12 +89,7 @@
     </head>
 
     <body>
-        <h1>AWS AWS AWS AWS AWS</h1>
-
-<h1>AWS AWS AWS AWS AWS</h1>
-
-<h1>AWS AWS AWS AWS AWS</h1>
-
+        <h1>Cloud computing with devops</h1>
 
 
         <ul>
