--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -91,8 +91,8 @@
     <body>
         <h1>Cloud computing with devops</h1>
 
-<h1> aws azure gcp linux python web-development devops </h1>
-<h1> dockerrrr</h1>
+<h1> DEVOPS PRACTICES </h1>
+<h1> CICD PIPELINE</h1>
         <ul>
             <% todolist.forEach(function(todo, index) { %>
             <li>
