--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -89,8 +89,8 @@
     </head>
 
     <body>
-        <h1>Cloud computing with devops</h1>
-
+        
+<h1> CICD ONLYYYYYYYYYYYYYYY</h1>
 <h1> DEVOPS PRACTICES </h1>
 <h1> CICD PIPELINE</h1>
         <ul>
