--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -90,9 +90,11 @@
 
     <body>
         
-<h1> CICD ONLYYYYYYYYYYYYYYY</h1>
+
 <h1> DEVOPS PRACTICES </h1>
 <h1> CICD PIPELINE</h1>
+
+<h1> THANK YOUUUUUUUUUUUUUUUUUUUUU</h1>
         <ul>
             <% todolist.forEach(function(todo, index) { %>
             <li>
